# open_spiel

./: .gitignore  compile_commands.json
open_spiel/algorithms/alpha_zero_torch/: .CMakeLists.txt.swp  .evaluate.cc.swp  .lts.cc.swp  .lts.h.swp  .play.cc.swp  .puct.cc.swp  .puct.h.swp  .uct.cc.swp  .uct.h.swp  CMakeLists.txt  alpha_beta_negamax.cc  bf2lts.cc  bf2lts.h  bf_lts.cc  bf_lts.h  evaluate.cc  id_ab_negamax.cc  lts.cc  lts.h  lts_run.cc  lts_self_play.cc  lts_self_play.h  negamax.cc  play.cc  puct.cc  puct.h  state_evaluator.cc  states_list.txt  test_bf2lts.cc  two_lts.cc  uct.cc  uct.h  vnet.pb
open_spiel/scripts/: global_variables.sh
